EXTRA_DIST = __init__.py \
             echotooltipitem.py \
             hrfileitem.py \
             iconfileitem.py \
             leftoveritem.py \
             multifiledragitem.py \
             outputsizeitem.py \
             sizeitem.py \
             targetnameitem.py \
             validatingitem.py
